@@ -2,6 +2,7 @@
     <qresource prefix="/translations" >
         <file>qstardict-bg_BG.qm</file>
         <file>qstardict-cs_CZ.qm</file>
+        <file>qstardict-pt_BR.qm</file>
         <file>qstardict-ru_RU.qm</file>
         <file>qstardict-ua_UA.qm</file>
         <file>qstardict-zh_CN.qm</file>
