@@ -45,3 +45,4 @@
 * Version 0.08
 	- add czech translation
 	- fix bug with multiple running from different users
+	- add brazilian portuguese translation
